# EurogasNexus

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE_CODE_START_HERE.md  CONTRIBUTING.md  LICENSE  PROJECT_DIRECTORY.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.agent/: PLANS.md
.agent/patches/: CODEX_CLEANUP_TARGETS.md  app_workspace_navigation_source_migration.md  enable_manual_ci_workflow_dispatch.md  remove_legacy_workspace_menu.md
.agent/plans/: CLI_M1_OPERATOR_COMMANDS_EXECPLAN.md  SDK_M1_API_CLIENT_EXECPLAN.md  V1_BOOTSTRAP_EXECPLAN.md  V1_M10_VALIDATION_UNIFICATION_EXECPLAN.md  V1_M11_WORKFLOW_SHELL_EXECPLAN.md  V1_M12_STREAMING_CONTRACT_EXECPLAN.md  V1_M13_RUNTIME_DQ_CONTRACT_EXECPLAN.md  V1_M14_API_PROFILE_CONTRACT_EXECPLAN.md  V1_M15_INGESTION_CONTRACT_EXECPLAN.md  V1_M1_GOVERNANCE_DB_API_PATH_EXECPLAN.md  V1_M2_DB_FOUNDATION_EXECPLAN.md  V1_M2_DB_RUNTIME_HARDENING_EXECPLAN.md  V1_M3_PERSISTENCE_SLICE_EXECPLAN.md  V1_M4_MIGRATION_INTEGRATION_EXECPLAN.md  V1_M5_SDK_CLI_SHELL_EXECPLAN.md  V1_M6_BOUNDARY_HARDENING_EXECPLAN.md  V1_M7_DOCS_ALIGNMENT_EXECPLAN.md  V1_M8_RELEASE_CONTRACT_EXECPLAN.md  V1_M9_SECURITY_CONTRACT_EXECPLAN.md  V1_R10_STRATEGY_SHADOW_RUN_EXECPLAN.md  V1_R11_RESEARCH_BRIEF_REPORTING_EXECPLAN.md  V1_R12_SDK_RELEASE_SURFACE_EXECPLAN.md  V1_R13_CLI_RELEASE_SURFACE_EXECPLAN.md  V1_R14_WEB_RELEASE_WORKSPACE_EXECPLAN.md  V1_R15_WINDOWS_RELEASE_SHELL_EXECPLAN.md  V1_R16_RELEASE_PACK_EXECPLAN.md  V1_R17_CLIENT_MARKET_PRACTICE_POLISH_EXECPLAN.md  V1_R18_OPERATIONAL_GLOSSARY_CONTEXT_EXECPLAN.md  V1_R19_MARKET_POSITIONING_IMPORT_CONTROL_EXECPLAN.md  V1_R20_INTUITIVE_GLOSSARY_CONTEXT_EXECPLAN.md  V1_R21_INTERNAL_OPERATOR_AUTH_EXECPLAN.md  V1_R22_DOCS_CLIENT_COCKPIT_ALIGNMENT_EXECPLAN.md  V1_R24_TRADER_ARCHITECTURE_RELEASE_POLISH_EXECPLAN.md  V1_R25_TRADER_CORRECTNESS_UX_DECOMPOSITION_EXECPLAN.md  V1_R26_TRADER_WORKSPACE_INFORMATION_ARCHITECTURE_EXECPLAN.md  V1_R28_PRODUCT_HARDENING_EXECPLAN.md  (+18 more)
.github/: pull_request_template.md
alembic/: env.py  script.py.mako
apps/: README.md
clients/: README.md
clients/desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/src/: main.rs
docs/: README-CN.md  README.md
infra/: README.md
(+612 files in other folders)
