[package]
name = "eurogas-nexus-desktop"
version = "0.1.0"
description = "Eurogas Nexus Windows client shell"
edition = "2021"
license = "Proprietary"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
